<resources>
    <string name="app_name">Webservices</string>
    <string name="task1">REST</string>
    <string name="task2">SOAP</string>
    <string name="task3">Server</string>
    <string name="raw_http">Raw HTTP</string>
    <string name="text">Text</string>
    <string name="json">JSON</string>
    <string name="xml">XML</string>
    <string name="soap">SOAP</string>
    <string name="temp_val">Temperature sensor value: %,.2f</string>
    <string name="ip">IP Address: %s</string>
    <string name="port">Port: %s</string>
    <string name="start_server">Start Server</string>
    <string name="stop_server">Stop Server</string>
    <string name="turn_on_hotspot">Please turn on your hotspot in order to use the server.</string>
</resources>
