<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rest"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.ethz.inf.vs.a2.activity.RestActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_raw_http"
        android:text="@string/raw_http"
        android:onClick="onRawHttpButtonClick"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_text"
        android:text="@string/text"
        android:onClick="onTextButtonClick"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_json"
        android:text="@string/json"
        android:onClick="onJsonButtonClick"/>
</LinearLayout>
